# Sati

./: README.md  meditations.csv  pyproject.toml  reflections.txt  requirements.txt  sati.db  sati_bot.py  sati_logs.csv  start_bot.sh  subscribers.json
