[project]
name = "sati"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "dotenv>=0.9.9",
    "google-genai>=1.41.0",
    "pypdf2>=3.0.1",
    "pytelegrambotapi>=4.29.1",
    "python-dotenv>=1.1.1",
    "telebot>=0.0.5",
]
